2008-09-05:
* Added: settings page for autocompletion

2008-08-28:
* Fixed: restoring cursor position after reloading

2008-08-25:
* Added: copying of installed API files to user's dir (if 
  they don't exist yet)

2008-08-24:
* Added: processing of read-only files

2008-08-21:
* Improved: serach using regexps
* Added: more file types to 'Open' dialog

2008-08-19:
* Added: autocompletion from API list (dictionary)

2008-08-06:
* Added: plugins settings

2008-07-24:
* Added: printing of selected lines

2008-07-23:
* Added: highlighting for Batch files
* Added: context menu for document tab

2008-07-14:
* Added: printing

2008-07-10:
* Added: basic plugins support
* Added: basic autocomplete

2008-07-08:
* Fixed: bug with unindention of the line below the selected ones

2008-07-05:
* Splitted 0.3 branch and started 0.4-dev

-------------------------------
Version 0.3-beta2
-------------------------------
* Fixed: bug with session restoring on Windows (forgot 
  about ':' in file path :))
* Added: syncronizing 'Open' dialog with current doc's dir
* Added: custom color for markers
* Added: custom color for current line highlighting
* Added: unindention of selected text with Shift+Tab
* Added: --lrelease option to configure script
* Updated desktop-file
* Updated localizations


-------------------------------
Version 0.3-beta1
-------------------------------
* Added support for diff-files;
* Hopefully fixed bug with opening the current dir (appered 
* Added French, Portuguese localizations
* Added: packaging script for Debian-based distros
* Added: Java custom highlighting scheme
* Added: doc comments to C++ scheme
* Added: 'Replace tabs with spaces' option
* Improved settings dialog
* Fixed: bug with small window when the app was closed 
  maximized several times in a row;
* Added: configure script
* Added: saving of last session even if no name was given to it
* Added: restoring scrollbar and cursor position when 
  restoring session