@@ -1,4 +1,5 @@
 2008-09-05:
+* Added: zoom in and zoom out (increase and decrease font)
 * Added: settings page for autocompletion
 
 2008-08-28:
